{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerPart1",
            "id": "94d6cd4b-464d-4e01-8c83-5f683323c852",
            "actions": [
                {
                    "name": "GrabbingLeft",
                    "type": "Button",
                    "id": "fb0521ce-475f-4101-9c13-1a2ae6d4888e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabbingRight",
                    "type": "Button",
                    "id": "38c8c0e9-8847-4706-9226-e98f7c24d31b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCloseInventory",
                    "type": "Button",
                    "id": "14cc2eb3-528d-4c51-af94-5a17059b0629",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "23b0135e-355f-4169-b81c-0681c4bd848e",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabbingLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeef98b3-845f-4994-a579-8367a95762af",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabbingRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ee15e0b-c358-43c4-a33e-90cf03ae9a4a",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerPart2",
            "id": "b1745e1e-68ac-4b76-b866-450880f37e27",
            "actions": [
                {
                    "name": "ShootingLeft",
                    "type": "Button",
                    "id": "5a34b7ff-0eba-4d65-98b1-6075562964a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootingRight",
                    "type": "Button",
                    "id": "dd0c7880-01ff-43e9-b763-e41b80ec6b05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "411bd8f9-45de-47e4-95c9-f3130af93d11",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfdfc9e7-b2d7-424b-9c15-e168d894dc80",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}